--- a/src/assets/scss/black-dashboard/custom/_variables.scss
+++ b/src/assets/scss/black-dashboard/custom/_variables.scss
@@ -105,6 +105,7 @@ $info:          #1d8cf8 !default;
 $warning:       #ff8d72 !default;
 $danger:        #fd5d93 !default;
 $black:         #222a42 !default;
+$cancelLote:    #ced746 !default;
 
 
 // gradient
@@ -115,6 +116,7 @@ $info-states:          #3358f4 !default;
 $warning-states:       #ff6491 !default;
 $danger-states:        #ec250d !default;
 $black-states:         #1d253b !default;
+$green-states:         #ef1940!default;
 
 $background-black:           #1e1e2f !default;
 $background-states-black:    #1e1e24 !default;
