--- a/src/app/components/eventos/evento-lista/evento-lista.component.html
+++ b/src/app/components/eventos/evento-lista/evento-lista.component.html
@@ -55,7 +55,7 @@
                       <img
                         [collapse]="showImage"
                         [isAnimated]="true"
-                        src="/assets/img/{{ evento.imagemURL }}"
+                        [src]="mostrarImagem(evento.imagemURL)"
                         [style.width.px]="widthImg"
                         [style.margin.px]="margenImg"
                       />
