--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,6 +1,3 @@
-
-
-
 <div class="container">
   <!-- Outer Row -->
   <div class="row justify-content-center">
@@ -10,27 +7,33 @@
           <!-- Nested Row within Card Body -->
           <div class="row d-flex justify-content-center">
             <!-- SE COLOCAR SIDEBAR PEGA A MANAGER COLOR -->
-            <div class=" card-login   col-lg-6 ">
+            <div class="card-login col-lg-6">
               <div class="p-5">
                 <div class="text-center">
                   <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                 </div>
-                <form class="user">
+                <form #loginForm="ngForm" (ngSubmit)="login()" class="user">
                   <div class="form-group">
                     <input
+                      [(ngModel)]="model.userName"
+                      name="userName"
                       type="email"
                       class="form-control form-control-user"
-                      id="exampleInputEmail"
+                      id="userName"
                       aria-describedby="emailHelp"
                       placeholder="Enter Email Address..."
+                      required
                     />
                   </div>
                   <div class="form-group">
                     <input
+                      name="password"
+                      [(ngModel)]="model.password"
                       type="password"
                       class="form-control form-control-user"
-                      id="exampleInputPassword"
+                      id="password"
                       placeholder="Password"
+                      required
                     />
                   </div>
                   <div class="form-group">
@@ -45,12 +48,14 @@
                       >
                     </div>
                   </div>
-                  <a
+                  <button
+                    [disabled]="loginForm.invalid"
+                    type="submit"
                     href="index.html"
                     class="btn btn-primary btn-user btn-block"
                   >
                     Login
-                  </a>
+                  </button>
                   <hr />
                   <a
                     href="index.html"
@@ -72,7 +77,9 @@
                   >
                 </div>
                 <div class="text-center">
-                  <a class="small" routerLink="/user/registration">Create an Account!</a>
+                  <a class="small" routerLink="/user/registration"
+                    >Create an Account!</a
+                  >
                 </div>
               </div>
             </div>
@@ -82,4 +89,3 @@
     </div>
   </div>
 </div>
-
